--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Inline:opsz,wght@10..72,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
 @import "tailwindcss";
 
 html{
-  font-family: "Big Shoulders Inline", sans-serif;
+  font-family: "Oswald", sans-serif;
   background-color: #151617;
+}
+body{
+  padding: 0;
+  margin: 0;
+  color: white;
 }
