--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Playwrite+IT+Moderna:wght@100..400&display=swap");
 @import "tailwindcss";
 
 @theme {
   --animate-glow: glow 1.5s ease-in-out infinite alternate;
+  --animate-blink: blink 1.5s infinite alternate;
 
   @keyframes glow {
     0% {
@@ -13,6 +14,22 @@
     }
   }
 }
+@theme {
+  --animate-blink: blink 1.5s infinite alternate;
+  @keyframes blink {
+    0%,
+    100% {
+      text-shadow: 0 0 5px #6366f1, 0 0 15px #6366f1, 0 0 20px #6366f1,
+        0 0 40px #4f46e5, 0 0 60px #4f46e5;
+      color: #c7d2fe;
+    }
+    0% {
+      text-shadow: none;
+      color: white;
+    }
+  }
+}
+
 html {
   font-family: "Oswald", sans-serif;
   background-color: #151617;
