--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,34 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Playwrite+IT+Moderna:wght@100..400&display=swap");
 @import "tailwindcss";
-
-@theme {
-  --animate-glow: glow 1.5s ease-in-out infinite alternate;
-  --animate-blink: blink 1.5s infinite alternate;
-
-  @keyframes glow {
-    0% {
-      box-shadow: 0 0 10px rgba(79, 70, 229, 0.5);
-    }
-    100% {
-      box-shadow: 0 0 20px rgba(79, 70, 229, 0.9);
-    }
-  }
-}
-@theme {
-  --animate-blink: blink 1.5s infinite alternate;
-  @keyframes blink {
-    0%,
-    100% {
-      text-shadow: 0 0 5px #6366f1, 0 0 15px #6366f1, 0 0 20px #6366f1,
-        0 0 40px #4f46e5, 0 0 60px #4f46e5;
-      color: #c7d2fe;
-    }
-    0% {
-      text-shadow: none;
-      color: white;
-    }
-  }
-}
+@import "./theme.css";
 
 html {
   font-family: "Oswald", sans-serif;
