--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,13 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Playwrite+IT+Moderna:wght@100..400&display=swap");
-@import "tailwindcss";
 @import "./theme.css";
+@import "tailwindcss";
+
+@custom-variant dark (&:where(.dark, .dark *));
 
 html {
   font-family: "Oswald", sans-serif;
-  background-color: #151617;
 }
 body {
   padding: 0;
   margin: 0;
-  color: white;
 }
